Fix ALVI spacing on mobile/tablet

--- a/src/scss/common/_utils.scss
+++ b/src/scss/common/_utils.scss
@@ -80,3 +80,9 @@
 .d-contents {
   display: contents !important;
 }
+
+.text-overflow-ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
